target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/build-timestamp: 2022-10-07 - 11:39:55 +0000
  labels:
    app.kubernetes.io/name: lnl-quarkus-app
    app.kubernetes.io/version: "1.0"
    app.openshift.io/runtime: quarkus
  name: lnl-quarkus-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: lnl-quarkus-app
    app.kubernetes.io/version: "1.0"
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/build-timestamp: 2022-10-07 - 11:39:55 +0000
  labels:
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: lnl-quarkus-app
    app.kubernetes.io/version: "1.0"
  name: lnl-quarkus-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: lnl-quarkus-app
      app.kubernetes.io/version: "1.0"
  template:
    metadata:
      labels:
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: lnl-quarkus-app
        app.kubernetes.io/version: "1.0"
    spec:
      containers:
        - image: quay.io/skraft/lnl-quarkus-app:2.0
          imagePullPolicy: Always
          name: lnl-quarkus-app
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/build-timestamp: 2022-10-07 - 11:39:55 +0000
  labels:
    app.kubernetes.io/name: lnl-quarkus-app
    app.kubernetes.io/version: "1.0"
    app.openshift.io/runtime: quarkus
  name: lnl-quarkus-app
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: lnl-quarkus-app
